makes link text on "All Tasks/Unarchived tasks" DRY (not being redefined in js).
That also prevents broken link names if another language than English is selected.

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -622,7 +622,8 @@ en:
       profile_picture: Profile Picture
       notifications: Notifications
     task_navigation:
-      all_tasks: All Tasks
+      all_tasks: "All Tasks"
+      unarchived_tasks: "Unarchived Tasks"
       my_tasks: "My {{count}} Tasks"
       archived_tasks: "All {{count}} Archived Tasks"
     footer:
