--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -623,6 +623,7 @@ es:
       notifications: Notificaciones
     task_navigation:
       all_tasks: Todas
+      unarchived_tasks: "Unarchived Tasks"
       my_tasks: "Mías ({{count}})"
       archived_tasks: "Archivadas ({{count}})"
     footer:
