makes link text for "Show archived tasks/Hide archived tasks" at the bottom of task list panel DRY (not being redefined in js).

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -359,6 +359,8 @@ en:
     link:
       new: + Add Task
       edit: Edit
+      show_archived_tasks: "Show archived tasks"
+      hide_archived_tasks: "Hide archived tasks"
     destroy_message:
       deleted: "The Task <b>{{name}}</b> was successfully deleted!"
     archive_message:
