--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -627,6 +627,7 @@ en:
       all_tasks: "All Tasks"
       unarchived_tasks: "Unarchived Tasks"
       my_tasks: "My {{count}} Tasks"
+      everybodys_tasks: "Everybody's tasks"
       archived_tasks: "All {{count}} Archived Tasks"
     footer:
       support: Feedback and bugs
