archived tasks are not shown even if assigned to me when "My Tasks" link is clicked on

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -626,9 +626,9 @@ en:
     task_navigation:
       all_tasks: "All Tasks"
       unarchived_tasks: "Unarchived Tasks"
-      my_tasks: "My {{count}} Tasks"
+      my_tasks: "My {{count}} Task(s)"
       everybodys_tasks: "Everybody's tasks"
-      archived_tasks: "All {{count}} Archived Tasks"
+      archived_tasks: "All {{count}} Archived Task(s)"
     footer:
       support: Feedback and bugs
       mobile: Mobile version
