--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -835,6 +835,7 @@ de:
     index_task_lists: "Alle Aufgabenlisten"
     index_uploads: "Alle hochgeladenen Dateien"
     new_conversations: "Neue Konversation"
+    results_search: Suche
     new_example_projects: "Erstellen Sie ein Beispiel-Projekt"
     new_pages: "Neue Seite"
     new_projects: "Neues Projekt"
