--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -910,6 +910,7 @@ fr:
     index_task_lists: "Mes tâches"
     index_uploads: "Mes fichiers"
     new_conversations: "Nouvelle conversation"
+    results_search: Recherche
     new_example_projects: "Créer un projet‑exemple"
     new_pages: "Nouvelle page"
     new_projects: "Nouveau projet"
